Extract gallery render logic into separate class

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -16,6 +16,12 @@
         app:layout_behavior="@string/searchbar_scrolling_view_behavior"
         tools:ignore="PrivateResource" />
 
+    <include
+        android:id="@+id/error_group"
+        layout="@layout/layout_common_error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
