--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -40,7 +40,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:liftOnScrollTargetViewId="@id/rv_albums">
+        app:liftOnScrollTargetViewId="@id/rv_gallery">
 
         <com.google.android.material.search.SearchBar
             android:id="@+id/search_bar"
