--- a/app/src/main/res/navigation/main_flow.xml
+++ b/app/src/main/res/navigation/main_flow.xml
@@ -11,8 +11,31 @@
         android:label="fragment_gallery"
         tools:layout="@layout/fragment_gallery" />
 
-    <include
-        app:graph="@navigation/albums_flow" />
+    <fragment
+        android:id="@+id/albums_fragment"
+        android:name="me.naloaty.photoprism.features.albums.presentation.AlbumsFragment"
+        android:label="fragment_albums"
+        tools:layout="@layout/fragment_albums" >
+        <action
+            android:id="@+id/action_view_album_content"
+            app:destination="@id/album_content_fragment"
+            app:enterAnim="@anim/zoom_in_enter"
+            app:exitAnim="@anim/zoom_in_exit"
+            app:popEnterAnim="@anim/zoom_out_enter"
+            app:popExitAnim="@anim/zoom_out_exit" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/album_content_fragment"
+        android:name="me.naloaty.photoprism.features.gallery.presentation.GalleryFragment"
+        android:label="fragment_gallery"
+        tools:layout="@layout/fragment_gallery" >
+        <argument
+            android:name="albumUid"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
 
 
 </navigation>
