Experimental media viewer implementation

--- a/app/src/main/res/layout/li_gallery_media_item.xml
+++ b/app/src/main/res/layout/li_gallery_media_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item_gallery_media"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="@dimen/li_gallery_media_item_margin"
     tools:layout_width="160dp">
 
