--- a/app/src/main/res/navigation/main_flow.xml
+++ b/app/src/main/res/navigation/main_flow.xml
@@ -51,8 +51,8 @@
         tools:layout="@layout/fragment_gallery">
 
         <argument
-            android:name="mediaId"
-            app:argType="string"
+            android:name="position"
+            app:argType="integer"
             app:nullable="false"/>
     </fragment>
 
