--- a/app/src/main/res/navigation/main_flow.xml
+++ b/app/src/main/res/navigation/main_flow.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/gallery_fragment"
-        android:name="me.naloaty.photoprism.features.gallery_v2.ui.GalleryFragment"
+        android:name="me.naloaty.photoprism.features.gallery.presentation.GalleryFragment"
         android:label="fragment_gallery"
         tools:layout="@layout/fragment_gallery">
 
@@ -32,7 +32,7 @@
 
     <fragment
         android:id="@+id/album_content_fragment"
-        android:name="me.naloaty.photoprism.features.gallery_v2.ui.GalleryFragment"
+        android:name="me.naloaty.photoprism.features.gallery.presentation.GalleryFragment"
         tools:layout="@layout/fragment_gallery" >
         <argument
             android:name="albumUid"
